<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FF9800">

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="568dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="80dp"

            android:text="@string/bottom_monday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_tuesday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_wednesday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_thursday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_friday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_saturday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/bottom_sunday"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="12dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>